--- a/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/06. 변수정의.md
+++ b/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/06. 변수정의.md
@@ -88,7 +88,7 @@ console.log(i);  // reference error
 
 ```
 
-한편, const는 값대입(정의)을 한 후 값이 변하지 않는 상수를 정의하는 데 사용한다. 상수는 한 번만 정의할 수 있는 것이 변수와 다른 점이다. 다음 예제를 보면 쉽게 이해할 수 있다.
+ const는 값대입(정의)을 한 후 값이 변하지 않는 상수를 정의하는 데 사용한다. 상수는 한 번만 정의할 수 있는 것이 변수와 다른 점이다. 다음 예제를 보면 쉽게 이해할 수 있다.
 
 \[예제: ex06\]
 
