--- a/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/02. 식별자(Identifier).md
+++ b/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/02. 식별자(Identifier).md
@@ -3,7 +3,7 @@
 ## 02. 식별자(Identifier)
 
 #### 1. 식별자 
- 프로그램은 여러 값들을 다룬다. 따라서 여러 값을 식별(구분)해야 할 필요성이 있다. 이런 이유로 값에 매핑된 변수이름을 식별자라 한다. 함수이름, 클래스이름, 모듈이름 등도 어휘적 범위와 실행범위에 따라 구분해야 할 필요가 있기 때문에 이런 것들도 모두 식별자다. 코딩시 작명때문에 고민하는 대부분의 것들이 식별자다.
+ 프로그램은 여러 값들을 다룬다. 따라서 여러 값을 식별(구분)해야 한다. 이런 이유로 값에 매핑된 변수의 이름을 식별자라 한다. 함수이름, 클래스이름, 모듈이름 등도 어휘적 범위와 실행 범위에 따라 구분해야 할 필요가 있기 때문에 이런 것들도 모두 식별자다. 코딩에서 작명때문에 고민하는 대부분의 것들이 식별자다.
 
 #### 2. 식별자의 문법 규칙
 1. $를 식별자에 사용할 수 있다는 것만 빼고 Java와 완전 동일
