--- a/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/05. 구문(Statement).md
+++ b/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/05. 구문(Statement).md
@@ -28,7 +28,7 @@
 
 #### 2\. 공백(space), 세미콜론(semicolon) 그리고 개행(line break)
 
-어휘분석에서 공백(space)는 무시될 수도 있고 토큰을 구분할 때 사용될 수 있다. 토큰 뒤의 공백은 무시될 것이고 토큰이 발견되기 전까지의 공백은 토큰을 구분할 때 사용된다.
+어휘분석에서 공백(space)은 무시될 수도 있고 토큰을 구분할 때 사용될 수 있다. 토큰 뒤의 공백은 무시될 것이고 토큰이 발견되기 전까지의 공백은 토큰을 구분할 때 사용된다.
 
 \[예제: ex01\]
 
@@ -70,7 +70,7 @@ b = 20;
  
  
  
- 이 이유로 라인끝에 세미콜론이 없는 자바스크립트 코드도 많이 작성된다. 자바스크립트는 실행을 위하거나 구문의 구분을 위해 세미콜론을 반드시 붙혀야 한다고 강제하지 않기 때문에 반드시 붙혀야 하는 것은 아니다. 하지만 이해하고 넘어가야 할 것이 있다. 다음 예제를 보자.  
+ 이 이유로 라인끝에 세미콜론이 없는 자바스크립트 코드도 많이 작성된다. 자바스크립트는 실행 또는 구문의 구분에 세미콜론을 강제하지 않기 때문에 반드시 붙혀야 하는 것은 아니다. 하지만 이해하고 넘어가야 할 것이 있다. 다음 예제를 보자.  
 
 \[예제: ex05\]
 
@@ -81,7 +81,7 @@ i
 console.log(i)
 ```
 
- 개행이 세미콜론의 대체쯤으로 이해하면 i; 10;는 문제 없지만 =;는 이항 연산자의 문법에 어긋난다. 하지만 실행에 별문제가 없다. 이유는 개행은 어떤 경우에는 공백과 마찬가지로 토큰을 분리한다. 따라서 이 코드는 아무 문제 없이 실행될 뿐만 아니라 3번 라인의 개행은 세미콜론 역할을 하기 때문에 대입 표현식이 실행되어 정상적으로 10이 출력된다. 그러면 개행이 언제 세미콜론 또는 토큰을 분리하는 역할을 하는지 그 기준이 궁금할 것이다. 그 기준은 생각 외로 간단하다. 최대한 옳은 어휘(문법)으로 개행을 해석하려 한다는 것이다. 앞의 예제에 이 기준을 적용해보자.
+ 개행이 세미콜론의 대체쯤으로 이해하면 'i;', '10;'는 문제 없지만 '=;'는 이항 연산자 표현식 문법에 어긋난다. 하지만 실행에는 문제가 없다. 이유는 개행은 어떤 경우에는 공백과 마찬가지로 토큰을 분리한다. 따라서 이 코드는 잘 실행될 뿐만 아니라 3번 라인의 개행은 세미콜론 역할을 하기 때문에 대입 표현식이 실행되어 정상적으로 10이 출력된다. 그러면 개행이 언제 세미콜론 또는 토큰을 분리하는 역할을 하는지 그 기준이 궁금할 것이다. 그 기준은 생각 외로 간단하다. 엔진은 최대한 옳은 어휘(문법)으로 개행을 해석하려 한다는 것이다. 앞의 예제에 이 기준을 적용해보자.
  
 1. 1번 라인에서 개행이 세미콜론으로 대체되면 1번 라인은 옳은 어휘이다. 이전에 i 이름의 변수 정의가 되지 않았기 때문에 오류라 생각할 수도 있지만 그 것은 실행 오류이고 지금은 전적으로 어휘적 오류(문법오류)의 여부만 기준으로 적용한다. 하지만 2번 라인에서 문법 오류가 있기 때문에 세미콜론 보다는 토큰을 분리하는 역할을 한다.
 2. 2번 라인도 세미콜론으로 대체된다면 지금까지의 토큰 모음(1=)이 어휘적으로 옳지 않다. 따라서 토큰을 분리하는 역할을 한다.
