--- a/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/06. 변수정의.md
+++ b/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/06. 변수정의.md
@@ -4,7 +4,7 @@
 
 #### 1\. 변수선언과 변수정의
 
- 변수선언과 변수정의를 엄격히 구분하는 프로그래밍 언어도 있지만 구분하지 않거나 어휘적 선언과 내부적 정의를 함께 적용하여 구분 자체가 별 의미가 없는 프로그래밍 언어들도 있다. 프로그래밍 언어의 어휘구조를 설명하고 있으니 구분해 보는 것도 나쁘지 않다. 간단한 자바스크립트 코드로 선언과 정의를 구분해 보자.
+ 변수선언과 변수정의를 엄격히 구분하는 프로그래밍 언어도 있지만 구분하지 않거나 어휘적 선언과 내부적 정의를 함께 적용하여 구분 자체가 별 의미가 없는 프로그래밍 언어들도 많다. 프로그래밍 언어의 어휘구조를 설명하고 있으니 구분해 보는 것도 나쁘지 않다. 간단한 자바스크립트 코드로 선언과 정의를 구분해 보자.
 
 \[예제: ex01\]
 
@@ -41,11 +41,11 @@ var z = 20;
 
 #### 3\. 키워드 let & const
 
-오래전 부터 있었던 var 키워드와 함께 ES6에 새롭게 추가된 let과 const 키워드는 변수 정의를 하는 키워드이다. 새롭게 변수 정의 키워드가 추가된 이유와 그 차이를 이해하기 위해서는 변수의 존재 범위 스코프를 이해해야 한다. 스코프는 자바스크립트 엔진의 내부 작동 원리와 함께 이해해야 할 중요한 주제지만 우선, 변수 정의 키워드들의 이해를 돕기 위해 간단히 설명해 보자.
+오래전 부터 있었던 var 키워드와 함께 ES6에 새롭게 추가된 let과 const 키워드는 변수 정의를 하는 키워드이다. 새롭게 변수 정의 키워드가 추가된 이유와 그 차이를 이해하기 위해서는 변수의 존재 범위인 스코프를 이해해야 한다. 스코프는 자바스크립트 엔진의 내부 작동 원리(실행컨텍스트)와 함께 이해해야 할 중요한 주제지만 우선, 변수 정의 키워드들의 이해를 돕기 위해 간단히 설명해 보자.
 
-프로그램 실행 흐름에서 변수를 정의하면 변수는 그 때부터 존재하게 된다. 이 변수의 존재 범위를 스코프(Scope, 범위) 라고 한다. 소스 코드에서 변수가 어떤 스코프에 속하는 지 판단할 수 있는 스코프를 정적 스코프라 한다. 자바스크립트는 정적 스코프이고 전역 스코프(Global Scope)와 함수 스코프(Function Scope)가 있었지만 새롭게 추가된 변수 정의 키워드로 블록 스코프(Block Scope)도 생겼다. 현재 자바스크립트의 변수는 이 세 가지 스코프를 가질 수 있다.
+프로그램 실행 흐름에서 변수를 정의하면 변수는 그 때부터 존재하게 된다. 이 변수의 존재 범위를 스코프(Scope, 범위) 라고 한다. 소스 코드에서 변수가 어떤 스코프에 속하는 지 판단할 수 있는 스코프를 정적스코프라 한다. 자바스크립트는 정적스코프이고 전역스코프(Global Scope)와 함수스코프(Function Scope)가 있었지만 새롭게 추가된 변수 정의 키워드로 블록스코프(Block Scope)도 생겼다. 현재 자바스크립트의 변수는 이 세 가지 스코프를 가질 수 있다.
 
-var 키워드는 변수를 함수내부에만 존재하게 하는 함수 스코프를 가지도록 하는 키워드이다. 변수를 함수 내부에서 var와 함께 정의하면 함수 내부에서만 그 변수가 존재한다. var와 함께 정의하지 않으면 전역스코프를 가져 프로그램 아무데서나 그 변수에 접근이 가능하다. 이를 호이스팅(Hoisting)이라 하는데 다음 두 예제를 실행해 보면 금방 이해할 수 있다.
+var 키워드는 변수를 함수의 내부에만 존재하게 하는 함수스코프를 가지도록 하는 키워드이다. 변수를 함수의 내부에서 var와 함께 정의하면 함수의 내부에서만 그 변수가 존재한다. var와 함께 정의하지 않으면 전역스코프를 가져 프로그램 아무데서나 그 변수에 접근이 가능하다. 이를 호이스팅(Hoisting)이라 하는데 다음 두 예제를 실행해 보면 금방 이해할 수 있다.
 
 \[예제: ex03\]
 
@@ -88,7 +88,7 @@ console.log(i);  // reference error
 
 ```
 
- const는 값대입(정의)을 한 후 값이 변하지 않는 상수를 정의하는 데 사용한다. 상수는 한 번만 정의할 수 있는 것이 변수와 다른 점이다. 다음 예제를 보면 쉽게 이해할 수 있다.
+ const는 값의 대입(정의)을 식별자에 한 후, 값이 변하지 않는 상수를 정의하는 데 사용한다. 상수는 한 번만 정의할 수 있는 것이 변수와 다른 점이다. 다음 예제를 보면 쉽게 이해할 수 있다.
 
 \[예제: ex06\]
 
@@ -98,5 +98,5 @@ n = 20;
 
 ```
 
-상수를 정의한 후에 값을 대입하면 Assignment to Constant Variable 오류가 발생한다.
+ 상수를 정의한 후에 값을 대입하면 'Assignment to Constant Variable' 오류가 발생한다.
 ![8f452804e2d4e52f0ee8ab6721865653.png](../../_resources/721fa8f292b74d1db6c11b4615b59c7f.png)
