--- a/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/07. 코드의 실행.md
+++ b/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/07. 코드의 실행.md
@@ -8,17 +8,17 @@
 
  자바스크립트 엔진은 구문(명령)들을 실행하고 결과를 지속적으로 유지해야 할 책임이 있다. 이를 위해 자바스크립트 엔진은 내부에 코드실행을 위한 환경(Environment)인 '실행컨텍스트(Execution Context)'을 지속적으로 생성하고 관리한다. 실행컨텍스트는 Scope, Hoisting, this, Closure등의 동작 원리이며 자바스크립트의 내부를 이해하기 위한 중요 개념이다.
 
- ECMAScript 표준에서는 실행컨텍스트의 생성 시기, 관리 정보(변수, 변수의 유효범위, this 바인딩, 함수선언) 그리고 그 정보들의 업데이트 시기 등을 상세하고 있는데 실행컨텍스트 생성과 구체적 작동 등과 같은 구현은 자바스크립트 엔진에 해야한다.
+ ECMAScript 표준에서는 실행컨텍스트의 생성 시기, 관리 정보(변수, 변수의 유효범위, this 바인딩, 함수선언) 그리고 그 정보들의 업데이트 시기 등을 상세하고 있는데 실행컨텍스트 생성과 구체적 작동 등과 같은 구현은 자바스크립트 엔진이 해야한다.
 
 #### 2\. 실행컨텍스트의 생성
 
 1. 실행 가능한 코드<br/>
-   코드의 실행환경 정보를 저장하고 관리하기 위한 것이기 때문에 코드 실행과 실행컨텍스의 생성은 연관성이 있다. 우선, 실행 가능한 자바스크립트 코드를 구분할 필요가 있다. 실행 가능한 자바스크립트 코드를 코드의 위치에 따라 구분해 보면,
+   실행컨텍스트는 코드의 실행환경 정보를 저장하고 관리하기 위한 것이기 때문에 코드 실행과 실행컨텍스의 생성은 연관성이 있다. 우선, 실행 가능한 자바스크립트 코드를 구분할 필요가 있다. 실행 가능한 자바스크립트 코드를 코드의 위치에 따라 구분해 보면,
    
     - 함수 내부에 존재하는 코드(함수 코드)
     - 함수 외부에 존재하는 코드(전역 코드)
     
-    이 간단한 구분으로 실행컨텍스트의 종류와 생성 시기가 달라진다.
+    이 간단한 구분으로 실행컨텍스트의 종류와 그에 따른 생성 시기가 달라진다.
     
 2. 실행컨텍스트의 구분<br/>    
     - 전역실행컨텍스(Global Execution Context)        
@@ -40,7 +40,7 @@
    자바스크립트 엔진은 실행컨텍스트들을 실행컨텍스트 스택(Execution Context Stack)이라 부르는 스택에 넣어 관리한다. 특정 시점의 실행 코드의 결과는 스택의 탑에 있는 실행컨텍스트에 반영된다. 스택의 맨 아래에는 전역실행컨텍스트가 항상 위치하게 되고 함수실행컨텍스트는 함수가 호출될 때 푸시(push)되고 함수가 종료되면 팝오프(pop off)된다.
     
 2. 실행컨텍스트 스택의 상태 변화<br/>
-   최초 자바스크립트 코드를 실행할 때 전역실행컨텍스트를 스택에 푸시(push)하고 전역 범위의 구문들을 실행하면서 스택의 탑에 있는 전역실행켄텍스트에 그 실행 결과를 반영한다. 그러다가 함수 호출을 만나게 되면 함수실행컨텍스트를 새로 생성해서 스택에 푸시한다. 그 함수의 코드들은 스택의 탑(Top)에 있는 함수 실행컨텍스트에 반영된다. 함수 블록이 끝나면 스택의 탑에 있는 함수실행컨텍스트는 팝오프(pop off)되어 스택에서 사라지고 다시 탑에 있는 전역실행컨텍스트에 전역 범위의 구문들의 실행결과가 반영된다. 예제 코드와 그림으로 이 과정을 다시 이해해 보자.
+   최초 자바스크립트 코드를 실행할 때 전역실행컨텍스트를 스택에 푸시(push)하고 전역 범위의 구문들을 실행하면서 스택의 탑에 있는 전역실행켄텍스트에 그 실행 결과를 반영한다. 그러다가 함수 호출을 만나게 되면 함수실행컨텍스트를 새로 생성해서 스택에 푸시한다. 그 함수의 코드들의 실행결과는 스택의 탑(Top)에 있는 함수 실행컨텍스트에 반영된다. 함수 블록이 끝나면 스택의 탑에 있는 함수실행컨텍스트는 팝오프(pop off)되어 스택에서 사라지고 다시 탑에 있는 전역실행컨텍스트에 전역 범위의 구문들의 실행결과가 반영된다. 예제 코드와 그림으로 이 과정을 다시 이해해 보자.
     
     \[예제: ex01\]
     
@@ -66,11 +66,11 @@
     
     ![d487fecfa7e98c056cfed84ef5815b75.png](../../_resources/763bb7ba145c4877b71350e4055ee8bf.png)
     
-    - [1] 예제 자바스크립트 코드의 1번 라인이 실행되기 전 전역 실행컨텍스트가 생성되고 스택에 push 된다.
-    - [2] 함수 정의 구문들의 반영은 스택의 탑에 있는 전역 실행컨텍스트에 반영 될 것이다. 그리고 18번 라인의 함수호출 표현식구문이 실행되면 함수 실행컨텍스트가 생성되고 스택에 push 된다.
-    - [3] f1함수 블록 내에 f2함수 정의 구문의 실행 결과는 f1 함수 실행컨텍스트에 반영되고 12번 라인의 함수호출 표현식구문이 실행되면 함수 실행컨텍스트가 하나 더 생성되고 스택에 push 된다.
-    - [4] f2함수의 실행이 끝나면 f2함수와 관련이 있는 함수 실행컨텍스트는 스택에서 pop 되면서 사라진다.
-    - [5] f1함수의 실행이 끝나면 f1함수와 관련이 있는 함수 실행컨텍스트도 스택에서 pop 되면서 사라진다.
+    - [1] 예제 자바스크립트 코드의 1번 라인이 실행되기 전 전역실행컨텍스트가 생성되고 스택에 push 된다.
+    - [2] 함수 정의 구문들의 반영은 스택의 탑에 있는 전역실행컨텍스트에 반영 될 것이다. 그리고 18번 라인의 함수호출 표현식구문이 실행되면 함수실행컨텍스트가 생성되고 스택에 push 된다.
+    - [3] f1함수 블록 내에 f2함수 정의 구문의 실행 결과는 f1 함수 실행컨텍스트에 반영되고 12번 라인의 함수호출 표현식구문이 실행되면 함수실행컨텍스트가 하나 더 생성되고 스택에 push 된다.
+    - [4] f2함수의 실행이 끝나면 f2함수와 관련이 있는 함수실행컨텍스트는 스택에서 pop 되면서 사라진다.
+    - [5] f1함수의 실행이 끝나면 f1함수와 관련이 있는 함수실행컨텍스트도 스택에서 pop 되면서 사라진다.
 
 #### 4\. 실행컨텍스트 생성과정 및 관리 정보
 
@@ -100,6 +100,6 @@
 3.  변수 환경(Variable Environment)<br/>
     변수 환경은 어휘 환경과 사실 동일하다. ES6부터 환경 기록에서 차이점이 생겼다. 어휘 환경 기록에는 함수 객체와 let과 const로 정의된 변수 정보가 저장돠고 변수 환경 기록에는 var 키워드로 정의된 변수만 저장된다.    
 
- 지금까지 설명한 내용은 ECMAScript 표준에서 상세하고 있는 실행컨텍스트 생성 과정의 요약 설명이다. 그리고 그 과정에서 실행컨텍스트 내부에 저장되는 정보들과 저장을 위한 컴포넌들에 대한 추상적이고 개념적인 내용들이다. 다음에는 이 명세를 기반으로 구체적인 실제 자바스크립트 엔진(v8) 구현을 참조하여 컴포넌트 객체의 실제 동작을 자바스크립트 코드와 함께 설명한다.
-
 #### 5\. 코드실행과 실행컨텍스트
+
+ 앞에 설명한 내용은 ECMAScript 표준에서 상세하고 있는 실행컨텍스트 생성 과정의 요약이다. 실행컨텍스트 생성 과정에서 실행컨텍스트 내부에 저장되는 정보들을 알아보았고 그 정보들의 저장을 위한 컴포넌트들에 대해 추상적이고 개념적이면서 개괄적인 설명을 하였다. 지금부터 이 내용들의 실제 자바스크립트 엔진(v8) 구현을 자바스크립트 코드와 함께 살펴 볼 것이다.
