--- a/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/01. 변수(Variable).md
+++ b/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/01. 변수(Variable).md
@@ -15,6 +15,5 @@ i = 10;     // JavaScript
 4.  컴퓨터에서 값이 저장될 수 있는 곳은 메모리이다. 따라서 어떤 공간은 컴퓨터 메모리의 특정 영역이다.
 5.  메모리의 특정 영역은 실제로 코드상의 이름보다는 메모리 주소로 표현된다.
 6.  C, C++ 언어에서는 변수이름은 메모리 주소에 대한 심볼(Symbolic Name)이 되며 컴파일(링크) 또는 실행 때에 실제 메모리주소로 매핑된다.
-7.  ECMAScript 표준에서는 변수관리를 위해 변수이름과 값의 매핑 자료구조로 구현하는 것을 명시하고 있는데 이를 Environments라 한다. 자바스트립트 엔진은 이를 자신의 구현 언어에 맞는 자료구조로 구현한다.(07. 코드의 실행 참고)
-8.  뒤에 설명할 Scope는 이 Environments와 관련이 있다.
-9.  뒤의 데이터 타입에서도 언급되지만, Environments에 키(변수이름)과 값만 단순히 매핑하는 되는 것은 아니다. 변수의 타입, 레퍼런스 또는 실제값 등의 변수정보도 함께 키에 매핑된다.
+7.  ECMAScript 표준에서는 변수의 관리를 위해 식별자(변수이름)과 레퍼런스 또는 값의 매핑 자료구조를 구현을 명시하고 있다. 이 상세를 실행컨텍스트 내의 어휘 환경(Lexical Environment)이라 한다. 자바스트립트 엔진은 이를 자신의 구현 언어에 맞는 자료구조로 구현한다.(07. 코드의 실행 참고)
+8.  어휘 환경(Lexical Environment)에 식별자(변수이름)와 레퍼런스 또는 값만 단순히 매핑하는 되는 것은 아니다. 변수의 타입, 레퍼런스 또는 값 등의 변수 정보도 함께 매핑된다.
