--- a/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/4.표현식.md
+++ b/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/4.표현식.md
@@ -1,8 +1,6 @@
-04. 표현식(Expression)
+4.표현식
 
-## 04. 표현식(Expression)
-
-#### 1. 표현식
+## 표현식(Expression)
  하나의 특정값(value)으로 평가(evalue)될 수 있는 JavaScript 코드를 표현식(expression)이라 한다. 표현식에 대한 이해를 돕기위해 값 4에 대한 여러 표현식을 예로 들어 보자.
 
 [예제: ex01] 
