--- a/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/5.구문.md
+++ b/technotes/joplin-md/javascript-practices/ch02.어휘구조와 코드의 실행/5.구문.md
@@ -1,10 +1,8 @@
-05. 구문(Statement)
+5.구문
 
-## 05\. 구문(Statement)
+## 구문(Expression)
 
-#### 1\. 구문
-
- 구문(Statement)은 자바스크립트의 실행단위이다. 파서(parser)라고 부르는 자바스크립트 엔진 내부의 어휘분석기가 코드의 어휘분석과 토큰분리를 한다. 이 과정 중에 적당한 개수의 토큰모음이 구성되면 그 토큰들을 실행한다. 적당한 개수의 토큰모음이란 구문의 어휘적 조건을 만족하는 토큰들과 옳은 순서를 의미한다. 구문은 다음과 같은 것들로 구성될 수 있다.
+ 구문은 자바스크립트의 실행단위이다. 파서(parser)라고 부르는 자바스크립트 엔진 내부의 어휘분석기가 코드의 어휘분석과 토큰분리를 한다. 이 과정 중에 적당한 개수의 토큰모음이 구성되면 그 토큰들을 실행한다. 적당한 개수의 토큰모음이란 구문의 어휘적 조건을 만족하는 토큰들과 옳은 순서를 의미한다. 구문은 다음과 같은 것들로 구성될 수 있다.
 
 1.  값(Value)
 2.  연산자(Operator)
@@ -26,9 +24,8 @@
 
  앞에서 언급한 예약어들과 구문의 구성요소들이 모여만 있다고 구문이 되는 것은 아니다. 다양한 구문들이 자기들만의 어휘구조(문법 규칙)을 가지고 있다. 프로그래밍은 이 어휘구조를 배우고 익히는 것부터 시작한다.
 
-#### 2\. 공백(space), 세미콜론(semicolon) 그리고 개행(line break)
-
-어휘분석에서 공백(space)은 무시될 수도 있고 토큰을 구분할 때 사용될 수 있다. 토큰 뒤의 공백은 무시될 것이고 토큰이 발견되기 전까지의 공백은 토큰을 구분할 때 사용된다.
+## 공백(space)
+ 어휘분석에서 공백(space)은 무시될 수도 있고 토큰을 구분할 때 사용될 수 있다. 토큰 뒤의 공백은 무시될 것이고 토큰이 발견되기 전까지의 공백은 토큰을 구분할 때 사용된다.
 
 \[예제: ex01\]
 
@@ -40,7 +37,8 @@ price           + 2000
 2.  공백 하나가 토큰을 분리하면 다음 토큰까지의 공백은 10개가 있던 100개가 있던 개수에 상관없이 무시된다.
 3.  +는 문자 하나로 연산자 토큰으로 분리가 가능하다. 따라서 뒤의 공백은 바로 무시 된다.
 
-세미콜론(semicolon, ;)은 원칙적으로 구문(Statement)들을 분리한다. 다음 예제를 보면, 세미콜론이 구문을 분리할 때 뿐만아니라 표현식의 실행과도 관련이 있음을 알 수 있다.
+## 세미콜론(semicolon)
+ 세미콜론(semicolon, ;)은 원칙적으로 구문(Statement)들을 분리한다. 다음 예제를 보면, 세미콜론이 구문을 분리할 때 뿐만아니라 표현식의 실행과도 관련이 있음을 알 수 있다.
 
 \[예제: ex02\]
 
@@ -56,7 +54,11 @@ a = 10; b = 20;
 a = 10 b = 20;
 ```
 
- 맨 뒤의 세미콜론때문에 표현식구문이 되어 실행된다. 두 표현식 사이에 공백은 앞에서 설명한대로 토큰을 분리하는 역할을 한다. 이 토큰모음(표현식 구문)은 리터럴 뒤에 식별자가 바로 올 수 없는 문법오류가 있다. 따라서 문법오류(Syntax Error)가 발생한다. 그러면 공백을 개행(line break)으로 바꾼 다음의 예제를 살펴보자.
+ 맨 뒤의 세미콜론때문에 표현식구문이 되어 실행된다. 두 표현식 사이에 공백은 앞에서 설명한대로 토큰을 분리하는 역할을 한다. 이 토큰모음(표현식 구문)은 리터럴 뒤에 식별자가 바로 올 수 없는 문법오류가 있다. 따라서 문법오류(Syntax Error)가 발생한다. 
+ 
+ 
+## 개행(line break)
+ 그러면 공백을 개행(line break)으로 바꾼 다음의 예제를 살펴보자.
 
 \[예제: ex04\]
 
@@ -66,7 +68,6 @@ b = 20;
 ```
 
  실행에 문제가 없다. 이 예제에서는 개행이 세미콜론 역할을 하기 때문이다. 개행이 세미콜론으로 대체된 것이라 보면 되는데 마치 세미콜론이 자동으로 삽입된 것(Automatic Semicolon Insertion)처럼 보이기도 한다. 노드로 이 예제를 디버깅 해보면 설명한 대로 실행되는 것을 알 수 있다. 
- 
  
  
  
