--- a/technotes/joplin-md/javascript-practices/1.Introduction/1.Timeline.md
+++ b/technotes/joplin-md/javascript-practices/1.Introduction/1.Timeline.md
@@ -91,7 +91,7 @@ ECMAScript 구현체는 이 세 스크립트 언어 밖에 없다. 한편, TC39 
 3.	ECMAScript4 명세중 이미 구현된 명세들은 계속 유지할 것이다.
 4.	ECMAScript4 명세에 구현되지 못한 명세 중에 자바스크립트 미래를 위해 구현되어야 할 명세들은 2009년 이후에도 계속 표준 명세로 발전시켜 나아간다.
 
-#### 2009년: ECMAScript5 발표
+## 2009년: ECMAScript5 발표
  ECMAScript3 이후로 수 많은 기술적 또는 정치적 시행착오로 ECMAScript4는 사실상 폐기된다. 자바스크립트의 인기에 비해 언어가 가지는 결점과 개선 되어야할 것들에 대한 요구가 커졌고 표준 명세 개정이 시급해졌다. 12월 다음의 내용으로 ECMAScript5 개정 발표가 있었다.
 
 1.	더 철저한 오류 검사를 제공.
