--- a/technotes/joplin-md/javascript-practices/02.Lexical Structure/04.변수정의.md
+++ b/technotes/joplin-md/javascript-practices/02.Lexical Structure/04.변수정의.md
@@ -1,8 +1,8 @@
-6.변수정의
+04.변수정의
 
-## 변수선언과 변수정의
+## 변수의 선언과 정의
 
-변수선언과 변수정의를 엄격히 구분하는 프로그래밍 언어도 있지만 구분하지 않거나 어휘적 선언과 내부적 정의를 함께 적용하여 구분 자체가 별 의미가 없는 프로그래밍 언어들도 많다. 프로그래밍 언어의 어휘구조를 설명하고 있으니 구분해 보는 것도 나쁘지 않다. 간단한 자바스크립트 코드로 선언과 정의를 구분해 보자.
+ 변수선언과 변수정의를 엄격히 구분하는 프로그래밍 언어도 있지만 구분하지 않거나 어휘적 선언과 내부적 정의를 함께 적용하여 구분 자체가 별 의미가 없는 프로그래밍 언어들도 많다. 프로그래밍 언어의 어휘구조를 설명하고 있으니 구분해 보는 것도 나쁘지 않다. 간단한 자바스크립트 코드로 선언과 정의를 구분해 보자.
 
 \[예제: ex01\]
 
@@ -16,8 +16,8 @@ console.log(x, y);
 1.  1번 라인은 변수에 값을 할당하지 않고 식별자로 변수의 이름만 부여하였기에 변수선언이 된다.
 2.  2번 라인은 식별자로 변수이름을 부여하고 그 이름에 값을 대입하였기에 변수정의가 된다.
 
-어휘적으로만 보면 구분은 쉽다. 하지만 실제 변수의 내용을 출력하고 자바스크립트의 언어적 의미를 따져보면 다소 혼란스럽다. 출력 결과를 보면 x가 'undefined'로 출력된다. 데이터 타입에서도 언급하겠지만 'undefined'는 자바스크립트 기본타입중 하나다. 값을 명시적(explicit)으로 대입하지 않았지만 'undefined'라는 타입의 값이 암시적(implicit)으로 대입되었다.
-var x = undefined 으로 명시적인 대입도 하지만 굳이 하지 않는다. 결론은 자바스크립트도 변수선언과 변수정의를 구분하지 않는다고 볼 수 있다. 1번 라인은 어휘적으로 선언이지만 내부적으로는 정의이다.
+ 어휘적으로만 보면 구분은 쉽다. 하지만 실제 변수의 내용을 출력하고 자바스크립트의 언어적 의미를 따져보면 다소 혼란스럽다. 출력 결과를 보면 x가 'undefined'로 출력된다. 데이터 타입에서도 언급하겠지만 'undefined'는 자바스크립트 기본 타입중 하나다. 값을 명시적(explicit)으로 대입하지 않았지만 'undefined'라는 타입의 값이 암시적(implicit)으로 대입되었다.
+'var x = undefined' 으로 명시적인 대입도 하지만 굳이 하지 않는다. 결론은 자바스크립트도 변수선언과 변수정의를 구분하지 않는다고 볼 수 있다. 1번 라인은 어휘적으로 선언이지만 내부적으로는 정의이다.
 
 
 ## 키워드 var
@@ -41,7 +41,7 @@ var z = 20;
 
 ## 키워드 let & const
 
-오래전 부터 있었던 var 키워드와 함께 ES6에 새롭게 추가된 let과 const 키워드는 변수 정의를 하는 키워드이다. 새롭게 변수 정의 키워드가 추가된 이유와 그 차이를 이해하기 위해서는 변수의 존재 범위인 스코프를 이해해야 한다. 스코프는 자바스크립트 엔진의 내부 작동 원리(실행컨텍스트)와 함께 이해해야 할 중요한 주제지만 우선, 변수 정의 키워드들의 이해를 돕기 위해 간단히 설명해 보자.
+ 오래전 부터 있었던 var 키워드와 함께 ES6에 새롭게 추가된 let과 const 키워드는 변수 정의를 하는 키워드이다. 새롭게 변수 정의 키워드가 추가된 이유와 그 차이를 이해하기 위해서는 변수의 존재 범위인 스코프를 이해해야 한다. 스코프는 자바스크립트 코어(작동원리)의 실행 컨텍스트(Execution Context)와 함께 이해해야 할 중요한 주제이지만 우선, 변수 정의 키워드들의 이해를 돕기 위해 간단히 설명해 보자.
 
 프로그램 실행 흐름에서 변수를 정의하면 변수는 그 때부터 존재하게 된다. 이 변수의 존재 범위를 스코프(Scope, 범위) 라고 한다. 소스 코드에서 변수가 어떤 스코프에 속하는 지 판단할 수 있는 스코프를 정적스코프라 한다. 자바스크립트는 정적스코프이고 전역스코프(Global Scope)와 함수스코프(Function Scope)가 있었지만 새롭게 추가된 변수 정의 키워드로 블록스코프(Block Scope)도 생겼다. 현재 자바스크립트의 변수는 이 세 가지 스코프를 가질 수 있다.
 
