모듈시스템

--- a/technotes/joplin-md/javascript-practices/01.Introduction/02.JavaScript & ECMAScript.md
+++ b/technotes/joplin-md/javascript-practices/01.Introduction/02.JavaScript & ECMAScript.md
@@ -2,17 +2,16 @@
 
 ## ECMAScript 표준 명세
 
-ECMAScript와 JavaScript 관계는 다분히 공학분야의 학술적 관계다. 기술적으로는 ECMAScript 표준 명세의 규칙과 지침대로 구현된 구현체 중 하나가 JavaScript이다. 구현체의 의미는 다음과 같다.
+ECMAScript와 JavaScript 관계는 공학(Engineering) 분야의 학술적 관계로 ECMAScript 표준 명세의 규칙과 지침대로 구현된 구현체 중 하나가 JavaScript가 된다. 구현체의 의미는 다음과 같다.
 
 1.  구현된 스크립트 언어의 문법 체계로 프로그래밍 코드 작성이 가능해야 한다.
 2.  작성된 코드는 스크립트 엔진(인터프리터)을 통해 실행되어야 한다.
 
-자바스크립트 타임라인에서 언급된 것처럼 ECMAScript 표준 명세의 구현체는 자바스크립트만 존재했던 것이 아니다.
-
 ## ECMAScript 구현체
+ 자바스크립트 타임라인에서 언급된 것처럼 ECMAScript 표준 명세의 구현체는 자바스크립트만 존재했던 것이 아니다.
 
 1.  JScript
-    Microsoft에서 개발한 ECMAScript 표준 명세 구현체이다. 기본적으로 ECMAScript5 명세를 구현하지만 Active Scripting이라는 자신들의 .NET Runtime 스크립팅 명세가 추가되어 있다. IE9+부터 Chakra(차크라) 이름의 엔진이 내장 되었는데 ECMAScript5 명세를 준수하고 Active Scripting까지 지원하는 JScript 엔진이다. IE Edge에 내장된 Chakra 엔진은 IE9+의 JScript엔진과 이름은 같지만 Active Scripting 기능을 빼고 최신 ECMAScript6를 구현한 순수 JavaScript 엔진이다.
+    Microsoft에서 개발한 ECMAScript 표준 명세 구현체이다. 기본적으로 ECMAScript5 명세를 구현하지만 Active Scripting이라는 자신들의 .NET Runtime 스크립팅 명세가 추가되어 있다. IE9+부터 Chakra(차크라) 이름의 엔진이 내장 되었는데 ECMAScript5 명세를 준수하고 Active Scripting까지 지원하는 JScript 엔진이다. 마이크로소프트의 버전 넘버 대신에 'Edge'라는 이름이 붙은 IE Edge에 내장된 Chakra 엔진은 IE9+의 JScript엔진과 이름은 같지만 Active Scripting 기능을 빼고 최신 ECMAScript6를 구현한 순수 JavaScript 엔진이다.
     
 2.  ActionScript
     어도비 플래시 애니메이션 구현을 위해 개발된 스크립트 언어다. 언어적 문법은 스크립트에 기반하지만 Java와 비슷하게 컴파일 후 중간 코드를 AVM(ActionScript Virtual Machine)에서 실행한다. 어도비가 모질라와 함께 ECMAScript4의 명세 작업을 주도하면서 개발되었고 엔진 이름은 Tamarin 이다. FLEX, AIR, 플래시 라이트 등의 플래시 파생 기술들과 데스크톱, 모바일로 실행 플랫폼이 넓다. 하지만, ECMAScript4 명세의 폐기와 함께 시장에서 퇴출되었다.
@@ -23,7 +22,7 @@ ECMAScript와 JavaScript 관계는 다분히 공학분야의 학술적 관계다
 
 ## 자바스크립트 엔진
 
-ECMAScript 표준 명세의 실제적 유일 구현체인 자바스크립트 코드를 실행하는 엔진은 그 종류가 상당히 많다.
+ECMAScript 표준 명세의 실제적 유일 구현체인 자바스크립트를 실행하는 엔진은 그 종류가 상당히 많다.
 
 1.  [SpiderMonkey](https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey)    
     - 최초의 JavaScript 엔진
@@ -57,7 +56,7 @@ ECMAScript 표준 명세의 실제적 유일 구현체인 자바스크립트 코
 
 ## ECMAScript 비표준 스크립트 언어
 
-ECMAScript2015(ES6)의 개정이 있기 이전에 자바스크립트의 언어적 결함, 데이터 타입의 모호함 등의 여러 이유로 개발된 자바스크립트 파생 스크립트 언어들을 가리킨다. 비표준 스크립트 언어로 작성된 코드는 대부분 컴파일러(트랜스컴파일러 또는 트랜스파일러)을 통해 자바스크립트 코드로 변환되어 자바스크립트 엔진에서 실행된다. 직접 실행할 수 있는 엔진이 존재하지 않기 때문에 자바스크립트의 방언쯤 되는 파생 스크립트 언어로 ECMAScript 표준 구현체라 볼 수 없다. 자바스크립트의 단점을 보완하면서 많이 쓰이고 있는 비표준 파생 스크립트 언어들은 다음과 같다.
+ECMAScript2015(ES6)의 개정이 있기 이전에 자바스크립트의 언어적 결함, 데이터 타입의 모호함 등의 여러 이유로 개발된 자바스크립트 파생 스크립트 언어들을 가리킨다. 비표준 스크립트 언어로 작성된 코드는 대부분 컴파일러(트랜스컴파일러 또는 트랜스파일러)을 통해 자바스크립트 코드로 변환되어 자바스크립트 엔진에서 실행된다. 직접 실행할 수 있는 엔진이 존재하지 않기 때문에 ECMAScript 표준 구현체라 볼 수 없다. 자바스크립트의 방언쯤 되는 파생 스크립트 언어로 보는 것이 맞다. 자바스크립트의 단점을 보완하면서 많이 쓰이고 있는 비표준 파생 스크립트 언어들은 다음과 같다.
 
 1.  [CoffeScript](https://coffeescript.org/)
     JSConference 2011에서 차세대 JS.next 스크립트 언어로 주목 받았다. 구글의 트랜스파일러 프로젝트 트레이서(Traceur) 발표로 주목 받은 스크립트 언어다. 자바스크립트의 설계 결함을 개선한 스크립트 언어 중 하나다. 트랜스컴파일을 통해 자바스크립트로 변환된다. 최신 자바스크립트를 지원하지 않는 단점으로 인해 경쟁 스크립트 언어인 TypeScript에 비해 현재는 인기가 많이 떨어져 있다.
