--- a/technotes/joplin-md/javascript-practices/01.Introduction/03. 주요 Library와 Frameworks.md
+++ b/technotes/joplin-md/javascript-practices/01.Introduction/03. 주요 Library와 Frameworks.md
@@ -1,4 +1,6 @@
-05. 주요 Library와 Frameworks
+03. 주요 Library와 Frameworks
+
+## Node.js
 
 ## jQuery
 
@@ -33,9 +35,9 @@
 
 ## React
 
-클라이언트 사이드의 유저 인터페이스 개발에 쓰이는 JavaScript 라이브러리이다. 다른 웹 프레임워크가 MVC, MVW 등의 구조를 지향하는데 반해 리액트는 오직 View만 담당하는데 이는 프레임워크라기 보다는 라이브러리라 볼 수 있다. 컴포넌트 단위로 애플리케이션을 작성한다. 라우터, Ajax, 상태관리를 위해서는 보통 프레임워크는 이를 다 내장하고 있지만 리액트는 외부 라이브러리나 코드를 사용할 수 있다. 보통, 라우팅에는 react-router, Ajax에는 axios, fetch, 상태 관리를 위해서는 redux, MobX 등을 사용한다. 리액트만 배워야 하는 것이 아니고 여러 라이브러리를 함께 익혀야 하는 단점도 있지만 개발에 맞는 스택을 설정할 수 있는 장점과 Backbone.js, Angular.js 와 같은 다른 웹프레임워크와 라이브러리와 조합할 수 있는 유연함도 있다.
+ 클라이언트 사이드의 유저 인터페이스 개발에 쓰이는 자바스크립트 라이브러리이다. 다른 웹 프레임워크가 MVC, MVW 등의 구조를 지향하는데 반해 리액트는 오직 View만 담당하는데 이는 프레임워크라기 보다는 라이브러리라 볼 수 있다. 컴포넌트 단위로 애플리케이션을 작성한다. 라우터, Ajax, 상태관리를 위해서는 보통 프레임워크는 이를 다 내장하고 있지만 리액트는 외부 라이브러리나 코드를 사용할 수 있다. 보통, 라우팅에는 react-router, Ajax에는 axios, fetch, 상태 관리를 위해서는 redux, MobX 등을 사용한다. 리액트만 배워야 하는 것이 아니고 여러 라이브러리를 함께 익혀야 하는 단점도 있지만 개발에 맞는 스택을 설정할 수 있는 장점과 Backbone.js, Angular.js 와 같은 다른 웹프레임워크와 라이브러리와 조합할 수 있는 유연함도 있다.
 
-React의 가장 큰 특징은 Virtual DOM이다. 개발자가 작성하는 React API는 React의 Virtual DOM을 업데이트하고 React가 실제 브라우저의 DOM의 업데이트 처리 횟수를 최소화하고 효율적으로 처리한다. 기존 DOM API를 사용한 화면 개발에 익숙하여 이 특징을 이해하지 못하면 React 프로그래밍 모델에 맞지 않는 부자연스러운 코드를 작성할 가능성이 있다. 개발 지원을 정리하면 다음과 같다.
+ React의 가장 큰 특징은 Virtual DOM이다. 개발자가 작성하는 React API는 React의 Virtual DOM을 업데이트하고 React가 실제 브라우저의 DOM의 업데이트 처리 횟수를 최소화하고 효율적으로 처리한다. 기존 DOM API를 사용한 화면 개발에 익숙하여 이 특징을 이해하지 못하면 React 프로그래밍 모델에 맞지 않는 부자연스러운 코드를 작성할 가능성이 있다. 개발 지원을 정리하면 다음과 같다.
 
 1.  기본적으로 Node를 사용하여 빌드와 개발용 서버 구동을 하여 개발을 진행한다.
 2.  ECMAScript 2015 (ES6) 기반의 JavaScript 코드를 작성하는 것이 보통이며 webpack을 사용하여 번들링 한다.
@@ -47,5 +49,6 @@ React의 가장 큰 특징은 Virtual DOM이다. 개발자가 작성하는 React
 
 ## Vue.js
 해야 하나??
+
 ## AngularJS
 해야 하나??
