--- a/technotes/joplin-md/javascript-practices/02.Lexical Structure/02.리터럴과 표현식.md
+++ b/technotes/joplin-md/javascript-practices/02.Lexical Structure/02.리터럴과 표현식.md
@@ -12,7 +12,7 @@ s1 = 'hello'
 s2 = "JavaScript is Awesome"
 ```
 
- 문자 그대로 표현된 숫자값을 i, j 에 저장하였다. 문자 그대로 표현된 문자열값을 s1, s2에 저장하였다. 문자열 리터럴 'JavaScript is Awesome'을 보면 문자열 리터럴값 표현을 위해 " 또는 '를 사용하는 것을 알 수 있다. 문장만 보면 공백문자를 포함하는 문자열이 하나의 문자열값이 된다. 따라서 공백문자까지 포함시키기 위해 따옴표를 사용한 것처럼 쉽게 이해해도 되지만 조금 생각해 보아야 하는 어휘적 이유가 있다.
+ 문자 그대로 표현된 숫자값을 i, j 에 저장하였다. 문자 그대로 표현된 문자열값을 s1, s2에 저장하였다. 문자열 리터럴 'JavaScript is Awesome'을 보면 문자열 리터럴값 표현을 위해 " 또는 '를 사용하는 것을 알 수 있다. 문장만 보면 공백문자를 포함하는 문자열이 하나의 문자열값이 된다. 따라서 공백문자까지 포함시키기 위해 따옴표를 사용한 것처럼 보이지만 조금 더 생각해 보아야 하는 어휘적 이유가 있다.
  
  JavaScript는 따옴표를 통해 문자열이 리터럴인지 아니면 식별자인지를 구분한다. 식별자는 숫자로 시작할 수 없는 식별자 규칙때문에 숫자로 시작한다면 따옴표로 구분할 필요없이 무조건 리터럴이 된다. 다음 예제를 보자.
 
@@ -23,7 +23,9 @@ orderPrice = caffeAmericano;
 orderMenu = "caffeAmericano";
 ```
 
- 1번 라인의 4100은 숫자 4로 시작하기 때문에 리터럴이다. = 연산자의 오른쪽항은 값이어야 하기 때문에 문제가 없다. 왼쪽항의 caffeAmericano는 숫자로 시작하지 않고 따옴표가 안 붙어 있기 때문에 식별자가 되어 오른쪽항의 숫자값 4100을 저장하는 변수이름이 된다. 2번 라인에서 숫자로 시작하지 않는 문자열에 따옴표가 없으면 식별자이므로 식별자 caffeAmericano는 변수이름으로 값 4100을 표현한다. 이 값이 왼쪽항으로 대입된다. 왼쪽항도 숫자로 시작하지 않고 따옴표도 없기 때문에 식별자가 되어 orderPrice라는 변수 이름으로 오른쪽항의 값 4100을 저장한다. 3번 라인을 보면 따옴표를 붙혔기 때문에 오른쪽항은 문자열 리터럴이다. 왼쪽항은 2번 라인과 마찬가지로 숫자로 시작하지 않고 따옴표도 없기 때문에 식별자가 되어 orderMenu라는 변수이름으로 오른쪽항의 문자열 리터럴값 "caffeAmericano"를 저장한다.
+1.	1번 라인의 4100은 숫자 4로 시작하기 때문에 리터럴이다. = 연산자의 오른쪽은 값이어야 하기 때문에 문제가 없다. 왼쪽의 caffeAmericano는 숫자로 시작하지 않고 따옴표가 안 붙어 있기 때문에 식별자가 되어 오른쪽의 숫자값 4100을 저장하는 변수이름이 된다.
+2.	2번 라인의 = 연산자 오른쪽을 보면, 숫자로 시작하지 않는 문자열에 따옴표가 없으면 식별자이므로 caffeAmericano는 변수이름으로 값 4100을 표현한다. 이 값이 왼쪽으로 대입된다. 왼쪽도 숫자로 시작하지 않고 따옴표도 없기 때문에 식별자가 되어 orderPrice라는 변수 이름으로 오른쪽 caffeAmericano 변수가 표현하는 값 4100을 저장한다.
+3.	3번 라인을 보면, 따옴표를 붙혔기 때문에 오른쪽은 문자열 리터럴이다. 왼쪽은 2번 라인과 마찬가지로 숫자로 시작하지 않고 따옴표도 없기 때문에 식별자가 되어 orderMenu라는 변수이름으로 오른쪽의 문자열 리터럴값 "caffeAmericano"를 저장한다.
 
  코드상에서 리터럴이 사용될 수 있는 곳은 예로 제시할 수 없을 만큼 많다. 여기서 알고 넘어가야 할 것은 리터럴은 표현식(Expression)중에 하나고 표현식이 사용될 수 있는 곳이면 어디서나 사용될 수 있다. JavaScript의 좋은 것(Good Parts, 더글라스 크라포드)중에 하나는 리터럴이 풍부하다는 것이다. 데이터 타입을 설명할 때, 데이터 타입마다 다양한 리터럴을 정리하도록 한다.
 
