--- a/technotes/joplin-md/javascript-practices/02.Lexical Structure/03.구문.md
+++ b/technotes/joplin-md/javascript-practices/02.Lexical Structure/03.구문.md
@@ -1,8 +1,8 @@
 03.구문
 
-## 구문(Expression)
+## 구문(Statement)
 
- 구문은 자바스크립트의 실행 단위이다. 파서(parser)라고 부르는 자바스크립트 엔진 내부의 어휘분석기가 코드의 어휘분석과 토큰분리를 한다. 이 과정 중에 적당한 개수의 토큰모음이 구성되면 그 토큰들을 실행한다. 적당한 개수의 토큰모음이란 구문의 어휘적 조건을 만족하는 토큰들과 옳은 순서를 의미한다. 구문은 다음과 같은 것들로 구성될 수 있다.
+ 구문은 자바스크립트의 실행 단위이다. 파서(parser)라고도 부르는 자바스크립트 엔진 내부의 어휘분석기가 코드의 어휘분석과 토큰분리를 하고 적당한 개수의 토큰들을 모아 실행한다. 따라서 적당한 개수의 토큰모음이 구문이 된다. 이 적당한 개수의 토큰모음은 어휘적 조건(문법)을 만족하는 옳은 순서를 가져야 한다. 구문은 다음과 같은 것들로 구성될 수 있다.
 
 1.  값(Value)
 2.  연산자(Operator)
@@ -10,7 +10,7 @@
 4.  주석(Comment)
 5.  예약어(Keyword)
 
-값과 연산자는 표현식을 구성한다. 주석문이라 부르는 주석은 구문을 구성하여도 무시되며 실행되지 않는다. 프로그래밍 입문에서 배우게 되는 기본적인 구문들은 다음 예약어들로 작성할 수 있다.
+ 값과 연산자는 표현식을 구성한다. 주석문이라 부르는 주석은 구문을 구성하여도 무시되며 실행되지 않는다. 프로그래밍 입문에서 배우게 되는 기본적인 구문들은 다음 예약어들로 작성할 수 있다.
 
 1.  if, if-else, if-else if
 2.  while
@@ -22,7 +22,7 @@
 8.  debugger
 9.  변수 선언(variable declaration)
 
- 앞에서 언급한 예약어들과 구문의 구성요소들이 모여만 있다고 구문이 되는 것은 아니다. 다양한 구문들이 자기들만의 어휘구조(문법 규칙)을 가지고 있다. 프로그래밍은 이 어휘구조를 배우고 익히는 것부터 시작한다.
+ 예약어들과 구문의 구성요소들이 모여만 있다고 구문이 되는 것은 아니다. 다양한 구문들이 자신들만의 어휘구조(문법 규칙)을 가지고 있다. 프로그래밍은 이 어휘구조를 배우고 익히는 것부터 시작한다.
 
 ## 공백(space)
  어휘분석에서 공백(space)은 무시될 수도 있고 토큰을 구분할 때 사용될 수 있다. 토큰 뒤의 공백은 무시될 것이고 토큰이 발견되기 전까지의 공백은 토큰을 구분할 때 사용된다.
@@ -38,7 +38,7 @@ price           + 2000
 3.  +는 문자 하나로 연산자 토큰으로 분리가 가능하다. 따라서 뒤의 공백은 바로 무시 된다.
 
 ## 세미콜론(semicolon)
- 세미콜론(semicolon, ;)은 원칙적으로 구문(Statement)들을 분리한다. 다음 예제를 보면, 세미콜론이 구문을 분리할 때 뿐만아니라 표현식의 실행과도 관련이 있음을 알 수 있다.
+ 세미콜론(semicolon, ;)은 원칙적으로 구문들을 분리한다. 다음 예제를 보면, 세미콜론이 구문을 분리할 때 뿐만아니라 표현식의 실행과도 관련이 있음을 알 수 있다.
 
 \[예제: ex02\]
 
@@ -46,7 +46,7 @@ price           + 2000
 a = 10; b = 20;
 ```
 
- 세미콜론이 두 개의 구문을 분리한다고 했는데 이는 다소 어휘적 표현이고 내부적으로는 세미콜론을 만나기 전까지의 토큰모음을 실행한다. 보통, 코드를 작성하게 되면 구문을 구분하기 위해 세미콜론을 사용하기 때문에 두 개의 구문을 분리하는 것처럼 보인다. 예제에서 세미콜론 앞의 코드 모음은 대입 표현식이다. 세미콜론을 만나면 실행되기 때문에 이 표현식은 실행된다. 실행단위를 구문이라 했기때문에 이 표현식을 표현식구문(Expression Statement)이라 한다. 가운데 세미콜론을 뺀 같은 코드의 예제를 살펴보자.
+ 세미콜론이 두 개의 구문을 분리한다고 했는데 이는 어휘적 표현이고 내부에서는 세미콜론을 만나기 전까지의 토큰모음을 실행한다. 보통, 코드를 작성하게 되면 구문을 구분하기 위해 세미콜론을 사용하기 때문에 두 개의 구문을 분리하는 것처럼 보인다. 예제에서 세미콜론 앞의 코드 모음은 대입 표현식이다. 세미콜론을 만나면 실행되기 때문에 이 표현식은 실행된다. 실행단위를 구문이라 했기때문에 이 표현식을 표현식구문(Expression Statement)이라 한다. 가운데 세미콜론을 뺀 같은 코드의 예제를 살펴보자.
  
 \[예제: ex03\]
 
@@ -54,7 +54,7 @@ a = 10; b = 20;
 a = 10 b = 20;
 ```
 
- 맨 뒤의 세미콜론때문에 표현식구문이 되어 실행된다. 두 표현식 사이에 공백은 앞에서 설명한대로 토큰을 분리하는 역할을 한다. 이 토큰모음(표현식 구문)은 리터럴 뒤에 식별자가 바로 올 수 없는 문법오류가 있다. 따라서 문법오류(Syntax Error)가 발생한다. 
+ 맨 뒤의 세미콜론때문에 표현식구문이 되어 실행된다. 두 표현식 사이에 공백은 앞에서 설명한대로 토큰을 분리하는 역할을 한다. 이 토큰모음은 리터럴 뒤에 식별자가 바로 올 수 없는 문법오류가 있다. 따라서 문법오류(Syntax Error)가 발생한다. 
  
  
 ## 개행(line break)
@@ -82,7 +82,7 @@ i
 console.log(i)
 ```
 
- 개행이 세미콜론의 대체쯤으로 이해하면 'i;', '10;'는 문제 없지만 '=;'는 이항 연산자 표현식 문법에 어긋난다. 하지만 실행에는 문제가 없다. 이유는 개행은 어떤 경우에는 공백과 마찬가지로 토큰을 분리한다. 따라서 이 코드는 잘 실행될 뿐만 아니라 3번 라인의 개행은 세미콜론 역할을 하기 때문에 대입 표현식이 실행되어 정상적으로 10이 출력된다. 그러면 개행이 언제 세미콜론 또는 토큰을 분리하는 역할을 하는지 그 기준이 궁금할 것이다. 그 기준은 생각 외로 간단하다. 엔진은 최대한 옳은 어휘(문법)으로 개행을 해석하려 한다는 것이다. 앞의 예제에 이 기준을 적용해보자.
+ 개행이 세미콜론의 대체쯤으로 이해하면 'i;', '10;'는 문제 없지만 '=;'는 이항 연산자 표현식 문법에 어긋난다. 하지만 예제 코드의 실행에는 문제가 없다. 이유는 개행은 어떤 경우에는 공백과 마찬가지로 토큰을 분리한다. 따라서 이 코드는 잘 실행될 뿐만 아니라 3번 라인의 개행은 세미콜론 역할을 하기 때문에 대입 표현식이 실행되어 정상적으로 10이 출력된다. 그러면 개행이 언제 세미콜론 또는 토큰분리의 역할을 하는지 그 기준이 궁금할 것이다. 그 기준은 생각 외로 간단하다. 엔진은 최대한 옳은 어휘(문법)으로 개행을 해석하려 한다는 것이다. 앞의 예제에 이 기준을 적용해보자.
  
 1. 1번 라인에서 개행이 세미콜론으로 대체되면 1번 라인은 옳은 어휘이다. 이전에 i 이름의 변수 정의가 되지 않았기 때문에 오류라 생각할 수도 있지만 그 것은 실행 오류이고 지금은 전적으로 어휘적 오류(문법오류)의 여부만 기준으로 적용한다. 하지만 2번 라인에서 문법 오류가 있기 때문에 세미콜론 보다는 토큰을 분리하는 역할을 한다.
 2. 2번 라인도 세미콜론으로 대체된다면 지금까지의 토큰 모음(1=)이 어휘적으로 옳지 않다. 따라서 토큰을 분리하는 역할을 한다.
