--- a/technotes/joplin-md/javascript-practices/11.Development Environments/03. ESLint.md
+++ b/technotes/joplin-md/javascript-practices/11.Development Environments/03. ESLint.md
@@ -1,7 +1,4 @@
-02
-
-## 02. ESLint : 코드 품질 검증 도구
-
+03. ESLint
 
 ### 1. 소개
 
@@ -15,19 +12,16 @@
 #### 1-2. 종류
 
 1. JSLint
-
    + JavaScript The Good Parts(번역서: 자바스크립트 핵심가이드)의 저자로 유명한 [더글라스 크락포드 (Douglas Crockford)](http://www.crockford.com) 가 JavaScript 구문 검사용으로 개발했다.
    + JavaScript 안티(anti, 비추천) 패턴, 예를 들어 루프에서 함수 선언하는 것과 같은 코드,  소스 코드의 유효성, 구문 오류, 사용하지 않는 변수 또는 선언하지 않은 변수와 같은 잠재적 위험요소까지 검증한다.
    + 설정 옵션이 다양하기 때문에 현업에서는 JSLint를 포크해서 자신들의 개발 컨벤션과 환경에 맞게 수정해서 사용한다.
    
 2. JSHint
-
    + JSLint의 크락포드의 코드 스타일 강제에 대한 반감으로 JSLint를 포크해서 개발되었다.
    + JSLint보다 유연하게 옵션 설정이 가능하다. 
    + typeof 연산자를 통한 타입 검사 그리고 내장 객체 프로토타입 적용 등 JSLint가 지원하지 않는 기능도 지원한다.
 
 3. ESLint
-
    + 비교적 최근에 개발된 JavaScript 린팅(linting) 도구다.
    + JavaScript 린팅 도구들 중 1순위로 추천할 정도로 최근에는 대세가 되었다.
    + Node 기반의 ES6 스타일과 JavaScript 린팅을 지원한다. 
@@ -368,5 +362,4 @@
       ```
 
     + 실행결과
-
-      # ![](http://image.kickscar.me:8080/markdown/javascript-practices/ch02-0079.png)
+      ![](http://image.kickscar.me:8080/markdown/javascript-practices/ch02-0079.png)
