--- a/technotes/joplin-md/javascript-practices/10.Module/02. ES6 모듈 기반 애플리케이션.md
+++ b/technotes/joplin-md/javascript-practices/10.Module/02. ES6 모듈 기반 애플리케이션.md
@@ -1,9 +1,13 @@
 02. ES6 모듈 기반 애플리케이션
 
- ES6 모듈 시스템은 애플리케이션 개발시 하나의 파일에 집중되는 코드를 분리하여 개발 가능하게 해주기 때문에 코드 관리 문제를 해결할 수 있는 강력한 매커니즘을 제공해준다. 재사용 가능성이 있는 분리된 코드는 라이브러리화 하여 다른 애플리케이션 개발에 재사용 할 수도 있다. Node 기반의 백엔드와 프론트엔드 개발은 모듈 시스템이 필수이기 때문에 처음부터 CommonJS 기반 모듈 지원을 하고 있었지만 v14+ 부터 ES6 표준 모듈 지원으로 교체되었다. 뿐만 아니라 ES6 표준 모듈 시스템을 지원하는 브라우저가 점점 늘어나 현재는 대부분 브라우저가 지원하고 있다. 따라서 ES6 표준 모듈 시스템에 따라 의존성을 가지고 분리되어 있는 애플리케이션 모듈들의 개별적 브라우저 로딩도 완벽하게 보장해 준다.  
+ ES6 모듈 시스템은 애플리케이션 개발시 하나의 파일에 집중되는 코드를 분리하여 개발 가능하게 해주기 때문에 코드 관리 문제를 해결할 수 있는 강력한 매커니즘을 제공해준다. 재사용 가능성이 있는 분리된 코드는 라이브러리화 하여 다른 애플리케이션 개발에 재사용 할 수도 있다. Node 기반의 백엔드와 프론트엔드 개발은 모듈 시스템이 필수이기 때문에 처음부터 CommonJS 기반 모듈 지원을 하고 있었지만 v14+ 부터 ES6 표준 모듈 지원으로 교체되었다. 뿐만 아니라 ES6 표준 모듈 시스템을 지원하는 브라우저가 점점 늘어나 현재는 대부분 브라우저가 지원하고 있다. 따라서 ES6 표준 모듈 시스템에 따라 의존성을 가지고 분리되어 있는 애플리케이션 모듈들의 개별적 브라우저 로딩도 완벽하게 보장해 준다.
+ 
+ 자바스크립트의 모듈은 js 파일 단위로 저장한다. 쉽게 말해, js파일 하나가 모듈이라 보면 된다. ES6 표준 모듈 시스템과 ES6 이전의 CommonJS 기반의 모듈 지원에서 모듈 내부의 함수, 클래스, 객체, 상수, 변수 등을 노출(Export) 하는 방법은 다르고 호환성도 없다. 다른 모듈에서 노츨된 모듈의 함수, 클래스, 객체, 상수 등을 사용하는 방법도 마찬가지다.   
+ 
+ 현재 자바스크립트 개발 생태계에서는 ES6 표준 모듈 시스템과 이전의 CommonJS 기반 모듈 지원이 혼재하여 사용되고 있는 다소 혼란스러운 상황이기 때문에 ES6 표쥰 모듈 시스템도 사용할 줄 알아야 하지만 ES6 이전의 모듈 지원도 이해하고 사용할 줄 알아야 한다.
  
 ## ES6 이전 모듈 지원
- 모듈 작성 및 사용법을 알아보기 위해 하나의 파일로 작성된 애플리케이션을 모듈로 분리해 작성해 보자. 지금은 ES6 표준 모듈 시스템과 이전의 CommonJS 기반 모듈 지원이 혼재하여 사용되고 있는 상황이기 때문에 ES6 표쥰 모듈 시스템 이전의 모듈 지원도 이해하고 사용할 줄 알아야 한다. 우선, ES6 이전 모듈 지원의 모듈 작성 및 사용을 먼저 알아보고 ES6 표준 모듈 시스템을 적용해 본다.
+ 우선, 간단한 애플리케이션을 단일 모듈로 작성해 보자. 
 
 [예제: ex01/index01.js]
 ```JavaScript
@@ -18,9 +22,10 @@ console.log(App());
 ```  
 1.	애플리케이션은 간단하다. App() 함수 안에서 app 객체를 생성해서 반환한다.
 2.	생성되는 app 객체는 "Hello World" 문자열 값의 textContext 속성을 가지고 있다. 
-3.	App() 함수를 호출해서 반환되는 객체를 출력한다.
+3.	App() 함수를 호출해서 반환되는 객체를 console.log()로 출력한다.
 
-이 애플리케이션을 App() 함수를 정의하는 모듈과 App()함수를 사용하는 모듈로 분리해 보자.
+
+다음 예제는 App() 함수를 정의하는 모듈과 App()함수를 사용하는 모듈로 각각 분리하는 예제이다.
 
 [예제: ex01/app.js]
 ```JavaScript
@@ -35,7 +40,7 @@ module.exports = App;
 ```
 1.	App 함수를 정의한다.
 2.	module.exports를 통해 외부로 노출할 함수 객체를 지정했다.
-3.	하나의 함수 객체뿐만 아니라 하나의 일반 객체 그리고 기본 타입의 값들도 가능하다.  
+3.	하나의 함수 객체뿐만 아니라 하나의 일반 객체 그리고 기본 타입의 값들도 외부로 노출이 가능하다.  
 
 [예제: ex01/index02.js]
 ```JavaScript
@@ -43,11 +48,11 @@ const App = require('./app02.js');
 console.log(App());
 ```
 1.	require 함수를 사용하여 모듈에서 노출된 객체를 변수로 받아 사용한다.
-2.	모듈의 확장자는 생략 가능하다.
+2.	모듈의 확장자는 생략할 수 있다.
 
- require() 함수는 Node에서만 지원하는 동기 방식의 IO 함수다. 사용시 주의할 것은 사용하는 파일의 윗부분에 초기화 단계에서 일괄적으로 사용해야 한다. 함수이기 때문에 로직이 실행되고 있는 코드에서 호출하는 것도 가능하다. 하지만 동기 방식으로 작동하기 때문에 require()가 완료될 때까지 코드가 멈추어 만일 서버 애플리케이션이라면 성능저하를 가져올 수 있다. 이는 Node 프로그래밍에서 require를 비롯한 동기식 작업을 애플리케이션 초기화에서 사용하는 일반적인 이유이기도 하다.
+ require() 함수는 Node에서만 지원하는 동기 방식의 IO 함수다. 사용하는 모듈을 작성할 때 주의할 것은 모듈의 윗부분의 초기화 단계에서 일괄적으로 require() 함수를 사용하는 것이 바람직하다. require는 함수이기 때문에 로직이 실행되고 있는 코드에서 호출하는 것도 가능하다. 하지만, 동기 방식으로 작동하기 때문에 require() 함수가 완료될 때까지 코드가 멈춘다. 만일 서버 애플리케이션이라면 성능 저하를 가져올 수 있다. 이는 Node 프로그래밍에서 require를 비롯한 동기식 작업을 애플리케이션 초기화하는 단계에서 사용하는 일반적인 이유이기도 하다.
  
- 다음은 값들과 함수등 다수의 값과 객체를 외부로 노출하는 모듈을 작성해 보자. 사실, 모듈 작성이 필요한 대부분 경우에는 module.exports 보다는 exports 객체를 생성하는 방식만으로 충분하다. 하지만, module.exports로만 모듈 작성이 가능한 경우가 있고 module.exports가 exports보다는 구조화된 모듈 작성에 좋다.
+ 다음은 다수의 값과 함수를 외부로 노출하는 모듈을 작성한다. 사실, 모듈 작성이 필요한 대부분 경우에는 module.exports 보다는 exports를 사용하는 방식만으로 충분하고 그렇게 하도록 디자인되어 있다. module.exports가 exports 보다는 모듈이 구조적으로 보이는 이유 때문에 다음 예제처럼 module.exports로 작성을 하는 경우도 있다. 하지만, module.exports를 사용하는 것은 require() 디자인 의도와 다르다는 것을 명확히 알고 사용하는 것이 필요하다.
  
 [예제: ex02/math.js]
 ```JavaScript
@@ -101,14 +106,18 @@ exports.min = function() {
 1.	exports 객체에 속성 이름과 값 또는 함수 정의를 대입하는 방식이다.
 2.	외부에서는 이 속성 이름으로 값 또는 함수에 접근하면 된다.
 
- ex03을 보면 exports로 객체를 생성하는 것 처럼 보이지만 사실은 module.exports 객체에 exports라는 이름으로 접근하고 있는 코드다. 즉, 다음 코드가 먼저 실행되고 require() 함수의 아규먼트로 전달된 모듈의 코드가 실행되는 것으로 이해하면 모듈 작성과 사용에 큰 실수를 하지 않는다.
+ ex03을 보면 exports로 객체를 생성하는 것처럼 보이지만 사실은 module.exports 객체를 exports라는 이름으로 접근하고 있는 코드다. 이를 이해하기 위해 다음 짧은 예시 코드를 살펴볼 필요가 있다. 처음 두 줄 코드가 먼저 실행되고 require() 함수의 아규먼트로 전달된 모듈의 코드가 실행된 후 module.exports를 반환한다.
  
 ```JavaScript
 module.exports = {};
 exports = module.exports;
+.
+.
+.
+return module.exports;
 ```
 
- 간단한 이 두 줄 코드를 보면, exports는 먼저 생성된 module.exports 객체의 별칭(alias)과 같다. 그리고 require() 함수는 항상 module.exports에 대입된 객체를 반환한다. 따라서 다음에 ex03/math.js과 같은 모듈 코드의 실행은 별 문제없이 기대했던대로 모듈의 값과 함수에 접근할 수 있다. 하지만 모듈이 다음과 같이 작성되어 있다면 기대와 다른 값과 객체들이 반환되거나 반환되지 못할 것이다.
+ 간단한 처음 두 줄 코드에서 exports는 먼저 생성된 module.exports 객체의 별칭(alias)과 같다. 그리고 require() 함수는 항상 module.exports를 반환한다. ex03/math.js의 exports는 처음 생성된 module.exports 객체에 속성을 추가하는 역할을 한다. 이런 이유로 만일 다음의 예제들과 같이 모듈이 작성되어 있다면 작성 의도와 다른 값과 객체들이 반환되거나 반환되지 못할 것이다.
 
 [예제: ex04/error_mod01.js]
 ```JavaScript
@@ -121,14 +130,14 @@ exports = App;
 1. App() 함수의 익스포트를 기대하지만 잘못된 사용이다.
 2. require('./error_mod01') 가 반환하는 객체를 확인해보면 {}로 이 모듈이 외부로 익스포트하는 것은 아무 것도 없다.
 
-[예제: ex05/error_mod02.js]
+[예제: ex04/error_mod02.js]
 ```JavaScript
 module.exports = function(){
     console.log('function01');
 }
 
 exports.function02 = function(){
-    console.log('function01');
+    console.log('function02');
 }
 ``` 
 1.	두 함수의 익스포트를 기대하지만 잘못된 사용이다.
@@ -136,23 +145,29 @@ exports.function02 = function(){
 3.  따라서 바꾼 함수만 외부로 익스포트 될 것이다.
 4.  require('./error_mod01')() 코드로 확인해 볼 수 있다.
 
+[예제: ex04/error_mod03.js]
 ```JavaScript
 module.exports = {
-	
+    n: 10,
+    s: 'javascript module',
+    o: {} 
 }
 
-exports.function02 = function(){
-    console.log('function01');
+exports.b = true;
+exports.f = function(){
 }
 ```
 1. 앞의 error_mod02.js의 잘못된 사용과 같다.
-2. 결과적으로 module.exports와 exports를 함께 사용하면 순서와 상관없이 exports의 기대했던 것은 무시된다.
-3. 이유는 맨 처음 언급한 두 줄 코드가 require() 함수 맨 앞에서 실행되기 때문이다.
+2. 결과적으로 module.exports와 exports를 함께 사용하면 순서와 상관없이 exports는 무시된다.
 
+
+----
+(여기서 부터 다시 작성)
 
 ## ES6 표준 모듈 시스템
- Node V14+ 부터 공식 지원하는 ES6 모듈 시스템은 이전 CommonJS 기반의 모듈 지원과 호환성이 없다. "use strict"의 존재 유무와 상관없이 무조건 strict 모드다. 따라서 CommonJS 기반의 모둘 지원으로 작성된 모듈은 ES6 표준 모듈 시스템의 방법으로 불러 올수 없으며 ES6 표준 모듈 시스템으로 작성된 모듈은 require() 함수로 불러 올 수 없다.
- 그리고 ES6 모듈 시스템이 작동하기 위해서는 package.json의 type 속성이 'module'로 설정되어 있어야 한다. 보통 Node기반 개발 프로젝트 디렉토리에는 `npm init` 명령을 통해 프로젝트 매니페스트 파일(패키지 관리 파일) package.json 파일이 존재한다. 이와 관련된 더 자세한 내용은 '11장 개발 환경'의 npm을 설명하면서 자세히 다룬다. 
+ 먼저, Node V14+ 부터 공식 지원하는 ES6 모듈 시스템으로 모듈 프로그래밍을 하기 전에 알아야 할 것이 있다. ES6 모듈 시스템은 이전 CommonJS 기반의 모듈 지원과 호환성이 전혀 없다. "use strict"의 존재 유무와 상관없이 무조건 strict 모드다. 따라서 CommonJS 기반의 모둘 지원으로 작성된 모듈은 ES6 표준 모듈 시스템의 import로 불러 올수 없다. 반대로 ES6 표준 모듈 시스템의 export로 작성된 모듈도 require() 함수로 불러 올 수 없다. 
+ 
+ 그리고 ES6 모듈 시스템이 작동하기 위해서는 package.json의 type 속성이 'module'로 설정되어 있어야 한다. 보통 Node기반 개발 프로젝트의 디렉토리에는 프로젝트 매니페스트 파일(패키지 관리 파일)인 package.json 파일(npm init 명령으로 생성)이 존재한다. package.json 파일의 역할과 문제점에 대한 자세한 내용은 '11장 개발 환경'의 npm을 설명하면서 자세히 다룬다. 
 
 #### 1. JavaScript 모듈 지원: project-ex01
 
@@ -167,7 +182,7 @@ export const App = function(){
 };
 ```
 
-​	ES6 모듈 지원에서는 각각의 모듈을 js 파일 단위로 저장한다. 쉽게 말해, js파일 하나가 모듈이라 보면 된다. 모듈 내부의 함수, 클래스, 객체, 상수, 변수 등은 export 키워드를 통해 외부에 노출하는데, 노출 방법은 여러 객체를 노출하거나 하나의 객체를 노출하는 두 가지 방법으로 나눌 수 있다. 예제는 함수 하나만 export 하고 있지만 여러 객체를 노출하는 방법을 사용하고 있다. 
+ ES6 export 키워드를 통해 외부에 노출하는데, 노출 방법은 여러 객체를 노출하거나 하나의 객체를 노출하는 두 가지 방법으로 나눌 수 있다. 예제는 함수 하나만 export 하고 있지만 여러 객체를 노출하는 방법을 사용하고 있다. 
 
 ​	앞에서 웹 애플리케이션 분리로 App.js와 index.js 두 모듈을 작성했다. 이 예제는 ES6 모듈을 테스트 하는 Node 기반 애플리케이션으로 브라우저에서 동작하는 애플리케이션이 아니다. 그래서 DOM API를 사용하여 HTMLElement 객체를 생성하는 대신 Object 타입 객체 `{}` 생성으로 바꿨다.     
 
