js env. webpack examples #1

--- a/technotes/joplin-md/javascript-practices/10.Module/02. ES6 모듈 기반 애플리케이션.md
+++ b/technotes/joplin-md/javascript-practices/10.Module/02. ES6 모듈 기반 애플리케이션.md
@@ -252,7 +252,7 @@ export const App = function(){
 
 ##### 2.4 Express 서버 작성 및 실행
 
-​	앞의 실습과 같다. 실습 프로젝트에서 복사하거나 앞의 실습의 'Express 서버 작성 및 실행' 부분을 참고하여 server.js 작성하고 실행하도록 한다.
+​	앞의 실습과 같다. 실습 프로젝트에서 복사하거나 앞의 실습의 'Express 서버 작성 및 실행' 부분을 참고하여 server.mjs 작성하고 실행하도록 한다.
 
 ```bash
 $ node server
