--- a/technotes/joplin-md/javascript-practices/11.Development Environments/09. Grunt & Gulp.md
+++ b/technotes/joplin-md/javascript-practices/11.Development Environments/09. Grunt & Gulp.md
@@ -50,8 +50,8 @@
 1. 프로젝트 project-ex01 디렉토리를 생성
 
    ```bash
-   $ mkdir project-ex01
-   $ cd project-ex01
+   $ mkdir ex01
+   $ cd ex01
    ```
 
 2. `npm init -y` 으로 package.json 파일을 생성
