--- a/technotes/javascript-practices/11.Development Environments/07. JSDoc.md
+++ b/technotes/javascript-practices/11.Development Environments/07. JSDoc.md
@@ -26,8 +26,8 @@
 2. 실습 프로젝트 project-ex01 생성 및 JSDoc 설치 
 
    ```bash
-   $ mkdir ex01
-   $ cd ex01
+   $ mkdir project-ex01
+   $ cd project-ex01
    $ npm init -y
    $ npm i --save-dev jsdoc
    ```
@@ -78,8 +78,8 @@
 1. 실습 프로젝트 project-ex02 생성 및 JSDoc 설치 
 
    ```bash
-   $ mkdir ex01
-   $ cd ex01
+   $ mkdir project-ex01
+   $ cd project-ex01
    $ mkdir src
    $ mkdir libs
    $ mkdir out-ex01
