--- a/technotes/javascript-practices/11.Development Environments/04. ESLint.md
+++ b/technotes/javascript-practices/11.Development Environments/04. ESLint.md
@@ -51,8 +51,8 @@
 1. 프로젝트 project-ex01 디렉토리를 생성한다.
 
    ```bash
-   $ mkdir ex01
-   $ cd ex01
+   $ mkdir project-ex01
+   $ cd project-ex01
    ```
 
 2. `npm init -y` 으로 package.json 파일을 생성한다.
