--- a/technotes/javascript-practices/11.Development Environments/06. UglifyJS.md
+++ b/technotes/javascript-practices/11.Development Environments/06. UglifyJS.md
@@ -57,8 +57,8 @@
 1. 실습 프로젝트 project-ex01 생성 및 uglify-js 설치 
 
    ```bash
-   $ mkdir ex01
-   $ cd ex01
+   $ mkdir project-ex01
+   $ cd project-ex01
    $ npm init -y
    $ npm i --save-dev uglify-js
    $ npx uglifyjs --version
